# BookWorld

./: CMakeLists.txt  Makefile  configure.sh
misc/: cert.pem  key.pem
misc/html/: home.html  index.html  login.html
misc/html/css/: style.css
src/: BookWorld.cpp  CMakeLists.txt  SQLWrapper.cpp  SQLWrapper.h  common.cpp  common.h  helpers.h  sqlwrapper.cpp  sqlwrapper.h
test/: common.cpp
